# Gamma-Trader

./: .gitignore  README.md
api/: pyproject.toml
api/gamma_trader_api/: app.py
configs/: config.example.yaml
ps/: _ZeroDTE_Strategy_v8_1_2-SPX.ps1
python/: pyproject.toml
python/gamma_trader/: __init__.py
python/gamma_trader/features/: levels.py
python/gamma_trader/ingest/: config.py  snapshot.py
python/gamma_trader/labels/: targets.py
python/gamma_trader/scripts/: build_dataset.py  export_for_dashboard.py  make_plan.py  train.py  watch_snapshots.py
scripts/: run_local.ps1  run_local.sh  setup_linux.sh  setup_windows.ps1
web/: README.md  index.html
